<resources>
    <string name="app_name_version">P e t W e i o</string>
    <string name="app_name">PetWeio</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_finding_and_tra">Finding and tracking your pet quickly and accurately. Please join us for a new experience with our products</string>
    <string name="msg_app_version_1_0">App Version 1.0.0</string>
    <string name="lbl_signup">SignUp</string>
    <string name="u_signup"><u><b>SignUp</b></u></string>
    <string name="lbl_pets_are_here">Pets are here.</string>
    <string name="lbl_login">Sign In</string>
    <string name="lbl_welcome_back">Welcome
Back!</string>
    <string name="token_mapbox">sk.eyJ1IjoiZmlnaHQyNDIwMDEiLCJhIjoiY2xtaXJmN3h4MGFvcjNtb3htYXVpaHB5diJ9.3LxklTWU06clW9ptZulGAA</string>
    <string name="driving_profile">Driving</string>
    <string name="walking_profile">Walking</string>
    <string name="cycling_profile">Cycling</string>

    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_password">Password</string>
    <string name="msg_forgot_password"><b><u>Forgot Password</u> ?</b> </string>
    <string name="btn_close">Close</string>
    <string name="or_sign_in_other_way"><b><u>or sign in other way</u> ?</b></string>
    <string name="remember_password">Remember password</string>
    <string name="msg_terms_conditi">Terms &amp; Conditions</string>
    <string name="lbl_let_s_start">Let\u2019s
Start !</string>
    <string name="lbl_user_name">User Name</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="pet">Pet</string>
    <string name="settings">Settings</string>
    <string name="user">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_api_key">AIzaSyCCk2t_Ps8R8axfu66n6lPmbCwdaVI5rMI</string>
    <string name="google_api_key_2">AIzaSyB8RUcMmNJW3FG1DOydVrw5NV3nO5jmDKs</string>
    <string name="key_api_hub">c114ab54demsh0b24342ab5f3893p1cad85jsn9303cabb0f26</string>
    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="key_mapbox">pk.eyJ1IjoiZmlnaHQyNDIwMDEiLCJhIjoiY2xwbWk3bTRuMDd6ODJrb2Iwa3AzcXljeCJ9.qUbaleWWngwFuarU0dOtMw</string>
    <string name="distance">Distance</string>
    <string name="_0_km">0 km</string>
    <string name="find">Find</string>
    <string name="device_01">Device 01</string>
    <string name="_100">100 %</string>
    <string name="type">Type:</string>
    <string name="dog">DOG</string>
    <string name="features">Features</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="enter_the_password">Enter The Password</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="NEWS_CHANNEL_ID">newsProMax</string>
    <string name="CHANNEL_NEWS">NewsProMax</string>

    <string name="CHANNEL_DESCRIPTION">Get informed with new updates</string>
    <string name="DEBUG_TAG">DebugNotification</string>
    <string name="CHANNEL_DISTANCE_ALERT_ID">channel_distance_alert</string>
    <string name="CHANNEL_DISTANCE_ALERT_NAME">Warning Distance</string>

    <string name="CHANNEL_DISTANCE_DESCRIPTION">Thông báo khi có cảnh báo về khoảng cách</string>
    <string name="CHANNEL_STATUS_ALERT_ID">channel_status_alert</string>
    <string name="CHANNEL_STATUS_ALERT_NAME">Warning Status</string>

    <string name="CHANNEL_STATUS_DESCRIPTION">Thông báo khi có cảnh báo về trạng thái</string>

</resources>