<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign.LoginActivity"
   >
        <LinearLayout
            android:id="@+id/linearColumn"
            style="@style/groupStylewhite_A700"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLogin"
                style="@style/groupStylewhite_A700"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearColumnclose"
                    style="@style/groupStylepink_50"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btnClose"
                        android:layout_width="@dimen/_20pxh"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_gravity="end"
                        android:layout_marginStart="@dimen/_31pxh"
                        android:layout_marginTop="@dimen/_30pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:contentDescription="@string/btn_close"
                        android:minHeight="48dp"
                        android:clickable="true"
                        android:src="@drawable/img_close"
                        tools:ignore="ContentDescription,ImageContrastCheck,TouchTargetSizeCheck"
                        tools:src="@drawable/img_close" />

                    <ImageView
                        android:id="@+id/frameStackRectangle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:importantForAccessibility="no"
                        android:src="@drawable/undraw_access_account_re"
                        tools:ignore="ImageContrastCheck" />
                    <LinearLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTitle"
                            style="@style/txtseymour_onebold50"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/lbl_welcome_back"
                            android:textColor="#994E2A36"
                            tools:text="@string/lbl_welcome_back" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/linearFieldUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_40pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_marginEnd="@dimen/_40pxh"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtUser"
                            style="@style/txtMontserratmedium14"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_11pxv"
                            android:layout_weight="0.1"
                            android:autofillHints=""
                            android:background="@color/trans"
                            android:hint="@string/lbl_user_name"
                            android:inputType="text"
                            android:minHeight="48dp"
                            android:singleLine="true"
                            android:textColorHint="@color/black"
                            tools:ignore="TextSizeCheck,VisualLintTextFieldSize" />

                        <ImageView
                            android:id="@+id/imgUser"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_marginEnd="@dimen/_3pxh"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:src="@drawable/img_user"
                            tools:ignore="ContentDescription"
                            tools:src="@drawable/img_user" />
                    </LinearLayout>

                    <View
                        android:id="@+id/lineVectorOne"
                        android:layout_width="@dimen/_295pxh"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/_31pxh"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="@dimen/_31pxh"
                        android:background="@color/bluegray_800" />

                    <LinearLayout
                        android:id="@+id/linearField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_40pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_marginEnd="@dimen/_40pxh"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtPassword"
                            style="@style/txtMontserratmedium14"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_11pxv"
                            android:layout_weight="0.1"
                            android:autofillHints=""
                            android:background="@color/trans"
                            android:hint="@string/lbl_password"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:singleLine="true"
                            android:textColorHint="@color/black"
                            tools:ignore="TextSizeCheck,VisualLintTextFieldSize" />

                        <ImageView
                            android:id="@+id/imgPass"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_marginEnd="@dimen/_3pxh"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:src="@drawable/img_lockicon"
                            tools:ignore="ContentDescription"
                            tools:src="@drawable/img_lockicon" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLoginUser"
                        style="@style/btnSolidRounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_31pxh"
                        android:layout_marginTop="@dimen/_37pxv"
                        android:layout_marginEnd="@dimen/_31pxh"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_15pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingBottom="@dimen/_15pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_login"
                        android:textAllCaps="false"
                        tools:ignore="TextSizeCheck,VisualLintButtonSize"
                        tools:text="@string/lbl_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnForgotPassword"
            style="@style/txtMontserratmedium12"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:background="@color/trans"
            android:text="@string/msg_forgot_password"
            tools:ignore="VisualLintBounds,TextSizeCheck"
            tools:text="@string/msg_forgot_password" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOther"
            style="@style/txtMontserratmedium12"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_65pxh"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/trans"
            android:text="@string/or_sign_in_other_way"
            tools:ignore="VisualLintBounds,TextSizeCheck"
            tools:text="@string/or_sign_in_other_way" />
    </LinearLayout>

                        <RelativeLayout
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:id="@+id/txtMoveSignUp"
                                style="@style/txtMontserratmedium12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:background="@color/trans"
                                android:gravity="center|end"
                                android:text="@string/don_t_have_an_account"
                                android:textAllCaps="false"
                                android:textStyle="normal"
                                android:layout_centerVertical="true"
                                tools:ignore="TextSizeCheck,VisualLintBounds,VisualLintOverlap"
                                tools:text="@string/don_t_have_an_account" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnMoveSignup"
                                style="@style/txtMontserratmedium14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:layout_toEndOf="@+id/txtMoveSignUp"
                                android:background="@color/trans"
                                android:gravity="center"
                                android:text="@string/u_signup"
                                android:textAllCaps="false"
                                android:textStyle="bold"
                                tools:ignore="TextSizeCheck,VisualLintBounds"
                                tools:text="@string/u_signup" />
                        </RelativeLayout>

                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>