<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegray_800"
    tools:context=".Menu.BottomNavActivity">


    <androidx.fragment.app.FragmentContainerView
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar"
        android:id="@+id/fragmentContainer"
        android:name="com.petweio.projectdoan.fragments.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:baselineAligned="false"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_todo"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <ImageView
                android:id="@+id/homeIMG"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_home_selected" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/home"
                android:textColor="#00695C"
                android:textSize="16sp"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/petLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/trans"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <ImageView
                android:id="@+id/petIMG"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_tracking" />

            <TextView
                android:id="@+id/petText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/pet"
                android:textColor="#00695C"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/aboutLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/trans"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <ImageView
                android:id="@+id/aboutIMG"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_list" />

            <TextView
                android:id="@+id/aboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="About"
                android:textColor="#00695C"
                android:textSize="16sp"
                android:visibility="gone"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/trans"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <ImageView
                android:id="@+id/settingIMG"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/settingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/settings"
                android:textColor="#00695C"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ProgressBar
            android:id="@+id/progressBarCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/SpinKitView.Large.WanderingCubes"
            android:indeterminateTint="@color/white"
            />


    </FrameLayout>
</RelativeLayout>